public class TextUI implements UI{

}
